Fix site container vertical alignment when screen not filled

--- a/assets/scss/components/_pagination.scss
+++ b/assets/scss/components/_pagination.scss
@@ -12,6 +12,10 @@
 	border-top: $base--border;
 	background-color: $color--background;
 
+	@include mq(m) {
+		margin-top: auto;
+	}
+
 	.wrap {
 		justify-content: center;
 	}
