--- a/assets/scss/objects/_site-container.scss
+++ b/assets/scss/objects/_site-container.scss
@@ -6,4 +6,14 @@
 /// @link   https://github.com/seothemes/genesis-starter-theme
 ////
 
-.site-container {}
+.site-container {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	min-height: 100%;
+
+	> * {
+		width: 100%;
+	}
+}
